welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: not found: value num
			x=num(i)
                          ^indexOfMaxValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for ( i<-1 to nums.length -1) {
               ^